# personal_assistant

./: .gitignore  Cargo.toml  README.md  schema.sql
frontend/: app.js  index.html  styles.css
src/: agent.rs  auth.rs  db.rs  finance.rs  groq.rs  main.rs  models.rs  storage.rs  tasks.rs
src/api/: mod.rs
